--- a/packages/server/public/src/index.css
+++ b/packages/server/public/src/index.css
@@ -1,9 +1,8 @@
 body {
   display: grid;
   grid-template:
-    "header" auto
     "main" 1fr
-    "aside" auto
+    "bottom-panel" auto
     "footer" auto / 1fr;
   gap: var(--theme-divider-width);
   padding: var(--theme-divider-width);
@@ -18,16 +17,13 @@ s2-command-bar {
   transform: translateX(-50%);
 }
 
-s2-document-header {
-  grid-area: header;
-}
-
 s2-text-editor {
   grid-area: main;
+  min-height: 0; /* allow it to shrink */
 }
 
 s2-reference-panel {
-  grid-area: aside;
+  grid-area: bottom-panel;
   max-height: 25vh;
 }
 
